Fix scroll-reveal visibility - only apply to [data-reveal] elements
Removed @include scroll-reveal from .feature, .stat, .code-block,
.split > article, and .split > figure. These classes were setting
opacity: 0 but the JavaScript only adds .is-visible to elements
with [data-reveal] attribute, causing content to be invisible.

Elements now only get scroll animations if they explicitly opt-in
with data-reveal attribute.

--- a/src/css/landing-bundle.scss
+++ b/src/css/landing-bundle.scss
@@ -217,8 +217,6 @@ section {
 .feature {
   @include card;
   @include card-hover;
-  @include scroll-reveal;
-  @include stagger-children(0.1s);
 }
 
 .feature .icon {
@@ -283,16 +281,7 @@ section {
   }
 }
 
-.split > article {
-  @include scroll-reveal-left;
-}
-
-.split--reverse > article {
-  @include scroll-reveal-right;
-}
-
 .split > figure {
-  @include scroll-reveal-scale;
   margin: 0;
   border-radius: $radius-xl;
   overflow: hidden;
@@ -313,8 +302,6 @@ section {
 .stat {
   text-align: center;
   min-width: 150px;
-  @include scroll-reveal;
-  @include stagger-children(0.15s);
 }
 
 .stat strong {
@@ -368,7 +355,6 @@ section {
 
 .code-block {
   position: relative;
-  @include scroll-reveal;
 }
 
 .code-block header {
